
  - Fix for Bug#60313 (11890729), bug in 
    com.mysql.jdbc.ResultSetRow.getTimestampFast().

  - Fix for bug 11782297, DBMD.getTables (so thus getColumns too) fails with 
    table names containing dot (like "junk_[Sp:e,c/ C-h+a=.r]").
  
  - Added the ability to determine if the connection is against a server on the 
    same host via the Connection.isServerLocal() method.

02-08-11 - Version 5.1.15

   - Fix for Bug#38367, parameters metadata did not reflect the fact that NULL is allowed 
     parameter value. So DatabaseMetaData.getProcedureColumns will set isNullable member to
	 java.sql.DatabaseMetaData.procedureNullable now.

   - Completed fix for Bug#27916.

   - Fix for Bug#59224, adding 5.5 reserved words to DatabaseMetaData.getSQLKeywords().

   - Fixed an issue where statement comments set via Connection.setStatementComment()
     weren't represented in autoGenerateTestcaseScript=true output.
     
   - Added ability to include the current java thread dump in the exception message
     given for deadlock/wait lock timeout exceptions, enable with 
     "includeThreadDumpInDeadlockExceptions=true" in your JDBC url.

   - Added ability to include current thread name as a statement comment visible
     in MySQL's "SHOW PROCESSLIST" and Innodb deadlock diagnostics, enable with
     "includeThreadNamesAsStatementComment=true".
     
   - Added an SLF4J logging adapter. Enable by adding setting the connection 
     property "logger" to "Slf4JLogger" and placing the appropriate bridge
     from SLF4J to the logging framework of choice in your CLASSPATH. As with
     other Connector/J logging adapters, the log category name used by the 
     driver is "MySQL". See http://www.slf4j.org/manual.html for more details. 
     
12-06-10 - Version 5.1.14

   - Fix for Bug#58728, NPE in com.mysql.jdbc.jdbc2.optional.StatementWrappe.getResultSet()
     if rs is null. Regression test case added to Statement regression tests.
